[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hutulock"
version = "1.0.0"
description = "HutuLock distributed lock Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-timeout"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hutulock*"]
